--- a/src/scss/global/_breadcrumb.scss
+++ b/src/scss/global/_breadcrumb.scss
@@ -1,6 +1,6 @@
 .breadcrumb {
-  padding-left: 1rem;
-  padding-right: 1rem;
+  // padding-left: 1rem;
+  // padding-right: 1rem;
   font-family: $gotham;
   margin: 0;
   font-size: .7em;
