--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -13,24 +13,9 @@ layout:default.hbs
 {{> global__header }}
 {{> school__navigation }}
 {{> site__title }}
+{{> page__title }}
 
-{{!-- <div class="off-canvas">
-	<div class="off-canvas--on">
-		{{> breadcrumb }}
-		{{> page__title }}
-	</div>
-
-	<div class="off-canvas--off">
-		{{> site__navigation }}
-	</div>
-	<div class="off-canvas--on">
-		{{> body }}
-	</div>
-</div> --}}
-
-<div class="inner">
-{{!-- {{> breadcrumb }} --}}
-{{!-- {{> page__title }} --}}
+<div class="inner--content">
 {{> body }}
 </div>
 
