--- a/src/templates/partials/page__title.hbs
+++ b/src/templates/partials/page__title.hbs
@@ -1,3 +1,5 @@
-<div class="page__title">
-<h1>Our Faculty</h1>
+<div class="inner">
+	<div class="page__title">
+		<h1>Our Faculty</h1>
+	</div>
 </div>
