--- a/src/scss/global/_header.scss
+++ b/src/scss/global/_header.scss
@@ -12,10 +12,9 @@
 }
 .global__logo {
     width: 9em;
-    margin: .5em 1em .25em 1em;
-}
-@media screen and (min-width: 60em) { 
-    .global__logo {
+    // margin: .5em 1em .25em 1em;
+    
+    @include respond-min(60em){ 
         padding: .5em 0;
         width: 11em;
     }
