--- a/src/scss/site/_site-title.scss
+++ b/src/scss/site/_site-title.scss
@@ -1,6 +1,6 @@
 
 .site__title {
-  padding: 1.5em 1em;
+  // padding: 1.5em 0em;
   // padding: 0;
   // text-align: center;
   // border-bottom: 1px solid $bethel--navy;
@@ -19,9 +19,9 @@
   // background: rgba($bethel--yellow, .8);
   // background: #fff;
 
-  @include respond-min(60em){
-    display: none;
-  }
+  // @include respond-min(60em){
+  //   display: none;
+  // }
 }
 
 .site__title h1 {
@@ -49,6 +49,7 @@
   // margin-top: 0;
   margin-bottom: 0;
   margin-top: 0;
+  margin-right: 1em;
   padding: .5em 0;
   // // margin: .5em;
   // // flex: 0 0 25%;
@@ -60,6 +61,10 @@
   text-transform: uppercase;
   // float:right;
   // margin-left: 7em;
+
+  @include respond-min(46em){
+    display: none;
+  }
 }
 
 .site__title__button a {
@@ -74,7 +79,7 @@
   // left: 0;
   // right: 0;
   // width: 12em;
-  white-space: nowrap;
+  // white-space: nowrap;
   // font-weight: 500; 
 }
 
