--- a/src/templates/partials/site__title.hbs
+++ b/src/templates/partials/site__title.hbs
@@ -1,8 +1,9 @@
-
-<div class="site__title">
-    <p class="site__title__button" id="site__title__button"><a href="#nav">☰ Menu</a></p>
-    {{!-- <a class="nav-btn" id="nav-open-btn" href="#nav">Book Navigation</a> --}}
-        {{!-- <h1>Department of Anthropology and Sociology</h1> --}}
-        <p class="breadcrumb  margins-off"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Adult Undergrad</a>{{!-- <a href="/undergrad/academics">Academics</a> --}}<br>
-        <span class="h2">Tuition & Financial Aid</span></p>
-</div>
+<div class="inner">
+	<div class="site__title">
+	    <p class="site__title__button" id="site__title__button"><a href="#nav">☰ Menu</a></p>
+	    {{!-- <a class="nav-btn" id="nav-open-btn" href="#nav">Book Navigation</a> --}}
+	        {{!-- <h1>Department of Anthropology and Sociology</h1> --}}
+	        <p class="breadcrumb  margins-off"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Adult Undergrad</a>{{!-- <a href="/undergrad/academics">Academics</a> --}}
+	        <span class="h2">Tuition & Financial Aid</span></p>
+	</div>
+</div> 
