--- a/src/scss/school/_school__navigation.scss
+++ b/src/scss/school/_school__navigation.scss
@@ -5,7 +5,7 @@
     margin: 0;
     padding: .75em .5em;
     // box-shadow: 0 4px 4px 0 rgba(210, 210, 210, 0.8);
-    overflow-x: scroll;
+    // overflow-x: scroll;
     // -webkit-overflow-scrolling: touch;
     border-bottom: 1px solid #ccc;
     font-family: $gotham;
