--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -11,13 +11,14 @@ layout:default.hbs
 
 {{> global__navigation }}
 {{> global__header }}
+{{!-- <img src="//fillmurray.com/1200/500">  --}}
 {{> school__navigation }}
 {{> site__title }}
-{{> page__title }}
+{{!-- {{> page__title }} --}}
 
-<div class="inner--content">
+{{!-- <div class="inner--content"> --}}
 {{> body }}
-</div>
+{{!-- </div> --}}
 
 {{!-- <span id="bazinga">Bazinga!</span> --}}
 
