--- a/src/scss/page/_page__title.scss
+++ b/src/scss/page/_page__title.scss
@@ -1,13 +1,28 @@
 .page__title {
-	// margin-top: 1em;
+	margin-top: 2em;
 	// margin-bottom: 1em;
-	// padding: 0 1em;
+	padding: 0 1em;
+	flex-basis: 100%;
+
+	@include respond-min(46em){
+		order: 1;
+		flex-shrink: 0;
+		padding: 0;
+	}
 }
 
-.page__title h1 {
+.page__title h1 { 
 	font-weight: 400;
 	// font-size: 2rem;
 	// line-height: 1;
 	margin-top: 0;
 	// padding: 0;
+
+	@include respond-min(46em){
+		font-size: 2.25em;
+	}
+
+	@include respond-min(60em){
+		font-size: 2.75em;
+	}
 }
