--- a/src/templates/partials/site__navigation.hbs
+++ b/src/templates/partials/site__navigation.hbs
@@ -1,29 +1,27 @@
-<div class="site__navgiation">
-    <div class="xblock">
-        <a class="btn  btn-yellow  close-btn" id="nav-close-btn" href="#top">x Close</a>
-        <h2 class="block-title">Chapters</h2>
+<div class="site__navigation" id="siteNav">
+    <a class="btn  btn-yellow  close-btn" id="nav-close-btn" href="#top">x Close</a>
+    {{!-- <h2 class="block-title">Chapters</h2> --}}
 
-        <ul class="accordion-list  accordion-list--open  first-level  margins-off">
-            <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="index.php">Art &amp; Design Home</a> </li>
-            <li class="accordion-list__item "><button class="accordion-list__button" href="#">+</button> <a class="accordion-list__link" href="/undergrad/academics/art/majors-minors">Majors &amp; Minors</a> </li>
-            
-            <ul class="accordion-list">
-                <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="majors-minors/art.php">Art</a> </li>
-                <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="majors-minors/fine-arts.php">Bachelor of Fine Arts (B.F.A.)</a> </li>
-                <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="majors-minors/graphic-design.php">Graphic Design</a> </li>
-                <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="majors-minors/arts-education.php">Visual Arts Education K-12</a> </li>
-                <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="majors-minors/art-minor.php">Art Minor</a> </li>
-                <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="majors-minors/graphic-design-minor.php">Graphic Design Minor</a> </li>
-            </ul>
-
-            <li class="accordion-list__item "><button class="accordion-list__button" href="#">+</button> <a class="accordion-list__link" href="/undergrad/academics/art/scholarship">Performance Scholarship</a> </li>
-            
-            <ul class="accordion-list">
-                <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="scholarship/apply.php">Application</a> </li>
-            </ul>
-
-            <li class="accordion-list__item accordion--active"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="faculty.php">Faculty</a> </li>
-            <li class="accordion-list__item "><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="/undergrad/academics/art/news">News</a> </li>
+    <ul class="accordion-list  accordion-list--open  first-level  margins-off">
+        <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="index.php">Art &amp; Design Home</a> </li>
+        <li class="accordion-list__item "><button class="accordion-list__button" href="#">+</button> <a class="accordion-list__link" href="/undergrad/academics/art/majors-minors">Majors &amp; Minors</a> </li>
+        
+        <ul class="accordion-list">
+            <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="majors-minors/art.php">Art</a> </li>
+            <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="majors-minors/fine-arts.php">Bachelor of Fine Arts (B.F.A.)</a> </li>
+            <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="majors-minors/graphic-design.php">Graphic Design</a> </li>
+            <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="majors-minors/arts-education.php">Visual Arts Education K-12</a> </li>
+            <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="majors-minors/art-minor.php">Art Minor</a> </li>
+            <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="majors-minors/graphic-design-minor.php">Graphic Design Minor</a> </li>
         </ul>
-    </div>
+
+        <li class="accordion-list__item "><button class="accordion-list__button" href="#">+</button> <a class="accordion-list__link" href="/undergrad/academics/art/scholarship">Performance Scholarship</a> </li>
+        
+        <ul class="accordion-list">
+            <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="scholarship/apply.php">Application</a> </li>
+        </ul>
+
+        <li class="accordion-list__item accordion--active"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="faculty.php">Faculty</a> </li>
+        <li class="accordion-list__item "><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="/undergrad/academics/art/news">News</a> </li>
+    </ul>
 </div>
